# Rust-Vendetta-Chess-Engine

./: ._ARCHITECTURE.md  ._CHANGELOG.md  ._CLAUDE.md  ._README.md  ._target  .gitignore  ARCHITECTURE.md  AUDIT_STABILITE_2026-06-23.md  AUDIT_STABILITE_2026-06-26.md  CHANGELOG.md  CLAUDE.md  COMMENT_TESTER_SPRT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rapport_selfplay.txt  selfplay_config.txt
.cargo/: config.toml
_to_delete/: ARCHITECTURE__fresh3.md  CHANGELOG__fresh3.md  Cargo__urlfix.toml  README__fresh3.md  README__urlfix.md
src/: lib.rs  main.rs
src/board/: bitboard.rs  magic.rs  mod.rs  state.rs
src/eval/: ._endgame.rs  center.rs  endgame.rs  king_safety.rs  material.rs  mobility.rs  mod.rs  pawns.rs  phase.rs  position.rs  tables.rs  threats.rs
src/game/: history.rs  mod.rs  rules.rs
src/moves/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/search/: alphabeta.rs  continuation_history.rs  countermove.rs  history.rs  killers.rs  mod.rs  see.rs  transposition.rs
src/uci/: mod.rs  parser.rs
src/utils/: mod.rs  types.rs
