[package]
name = "vendetta_chess_motor"
version = "1.1.2"
edition = "2021"
authors = ["Fabrice Garcia <fabgarcia2b@hotmail.fr>"]
description = "Moteur d'échecs professionnel en Rust - 100% compatible UCI"
license = "GPL-3.0-or-later"
readme = "README.md"

# Aucune dépendance externe pour le moteur de base.
# Philosophie du projet : stabilité et correction avant performance.
[dependencies]

[[bin]]
name = "vendetta_chess_motor"
path = "src/main.rs"

[[bin]]
name = "perft"
path = "src/bin/perft.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "extract_positions"
path = "src/bin/extract_positions.rs"

[[bin]]
name = "tuner"
path = "src/bin/tuner.rs"

[[bin]]
name = "selfplay"
path = "src/bin/selfplay.rs"

[profile.release]
opt-level = 3
# Link-Time Optimization : optimisation inter-modules au moment de l'édition de
# liens. Permet l'inlining et l'élagage entre crates/modules que le codegen par
# unité ne voit pas. Gain typique mesuré sur un moteur d'échecs : +5 à +15 % NPS.
# Aucun impact sur la LOGIQUE (résultats de recherche identiques) — donc zéro Elo
# perdu, et même un gain d'Elo à temps fixe (recherche plus profonde).
lto = true
# Une seule unité de codegen : le compilateur optimise tout le crate d'un bloc
# (au prix d'une compilation plus lente). Se combine avec LTO pour le meilleur
# code possible. Là encore, pure vitesse, zéro changement de comportement.
codegen-units = 1
# Note : `panic = "abort"` apporterait un petit gain supplémentaire (suppression
# des "landing pads" de déroulement), mais il est volontairement OMIS ici car il
# interfère avec `cargo test` (le harness de test a besoin du déroulement de pile)
# et avec le `panic!` diagnostique de magic.rs. Le gain ne justifie pas ce risque.
